# GenoInsight

./: CMakeLists.txt  LICENSE  README.md
include/gui/: AnalysisWidget.h  MainWindow.h  RecommendationWidget.h  UploadWidget.h  VisualizationWidget.h
include/logic/: GenomicDataAnalyzer.h  RecommendationEngine.h
src/: main.cpp
src/gui/: AnalysisWidget.cpp  MainWindow.cpp  RecommendationWidget.cpp  UploadWidget.cpp  VisualizationWidget.cpp
src/logic/: GenomicDataAnalyzer.cpp  RecommendationEngine.cpp
src/scripts/: GenomicDataUploader.py
